# octlib

./: .gitignore  CMakeLists.txt  README.md
include/data_structures/: static_range_query.h
test/: nested_vector.cpp  static_range_query.cpp  static_range_query_deep.cpp  vector_dimension.cpp
